src/ColumnsBlock/styles.less
.columns-block {
  & > .column {
    // padding: 4px;
    // & > .column {
    //   padding: 4px !important;
    // }
  }

  .block-column .ui.block.inner {
    .block {
      margin-bottom: 0;
    }
  }

  .column-grid {
    margin-right: -0.2rem !important;
    margin-left: -0.2rem !important;

    .column:first-child {
      padding-left: 0.2rem !important;
    }

    .column:last-child {
      padding-right: 0.2rem !important;
    }
  }

  .block-column {
    padding: 0.3em !important;

    // .column-header {
    //   width: 100%;
    //   text-align: center;
    //   border-bottom: 6px solid #eaeaea;
    //   margin: 0.3em auto 0.8em auto;
    // }

    .blocks-form {
      padding: 0.8rem !important;
    }

    .block {
      margin-bottom: 1.5em;
    }

    // .block.selected {
    //   border: 1px solid #826A6A;
    //   padding: 0.3em 0.5em;
    //   border-radius: 2px;
    // }

    .block {
      .block-add-button {
        display: none;
      }
    }
  }

  a.ui.card,
  .ui.cards a.card,
  .ui.link.cards .card,
  .ui.link.card {
    border: 1px solid #edf2f3;
    box-shadow: none;

    &:hover {
      border: 1px solid #edf2f3;
      background-color: #edf2f3;
      box-shadow: none;
    }
  }

  .ui.card .content {
    padding-top: 1.5em !important;
    padding-bottom: 1.5em !important;
    font-size: 10px !important;
    text-align: center;

    p {
      color: #717171;
    }

    svg {
      fill: #68778d !important;
    }
  }

  [data-rbd-draggable-context-id] {
    margin-bottom: 0.3em;
  }
}

.columns-view {
  .ui.grid.column-block-grid {
    display: initial !important;
  }

  .column-blocks-wrapper {
    padding-top: 0.5em !important;
    padding-bottom: 0.5em !important;
  }
}

.ui.grid.column-grid {
  margin-top: 0.8rem;
  margin-bottom: 0.8rem;
}

.block-toolbar {
  position: absolute;
  left: 0px;
  display: flex;
  border: none;
  margin-top: -34px;
  margin-bottom: 8px;
  background-color: #8dd7ef;
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;

  .ui.basic.button {
    padding: 3px;
    padding-right: 0;
  }

  .wrapper-column-block {
    > .ui.basic.button {
      &:hover {
        background-color: transparent !important;
      }
    }
  }

  > .ui.basic.button {
    &:hover {
      background-color: transparent !important;
    }

    svg {
      color: #134448;
    }
  }

  .drag.handle.wrapper-column-block {
    position: initial;
    left: initial;
    min-height: 1em;
    margin-left: initial !important;
    font-size: 1rem;
    line-height: 1em;
    vertical-align: baseline;
  }
}

.drag-drop-list-widget {
  .columns-area {
    padding: 1em 0em;

    [data-rbd-draggable-context-id] {
      margin-bottom: 0.3em;
    }

    .drag.handle.wrapper {
      min-height: auto;
    }

    .column-area {
      display: flex;

      .label {
        flex-grow: 2;
        padding-left: 1em;
      }

      button {
        flex-grow: 0;
      }
    }
  }
}

.layout-select-widget-selection-icon {
  margin-right: 1.5rem;
  vertical-align: middle;
}

